[package]
name = "zeroize"
description = "Securely clear secrets from memory. Built on stable Rust primitives which guarantee memory is zeroed using an operation will not be 'optimized away' by the compiler."
version = "1.0.5"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Radu Marias <radumarias@gmail.com>"]
homepage = "https://radumarias.github.io/zeroize-python"
repository = "https://github.com/radumarias/zeroize-python"
readme = "README.md"
keywords = ["memory", "volatile", "secure", "memset", "zero"]
categories = ["cryptography", "memory-management", "os", "no-std"]
documentation = "https://github.com/radumarias/zeroize-python"
exclude = [".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zeroize"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
zeroize_rs = { version = "1.8.1", package = "zeroize"}
numpy = "0.21"
memsec = "0.7.0"

[profile.release]
panic = "abort"
